fixes bug 184304 "When memory cache is disabled, no-store pages are not displayed at all" patch by mozilla@Weilbacher.org, r=biesi, sr=darin